 - Added a new floor to the Abandoned North Mine.
 - Added lots of new crafting recipes for items both old and new.
 - Added a ton of new animations for skills, items, and more.
 - Added many new custom state overlays.
 - Added a new and unique fishing system.
 - Added farming.
 - Added pets. 7 are present in this update, and more will come in the future.
 - Added Discord rich presence support.
 - Added 18 new player skills:
  ~ Player 1, 4 skills:
   > [P] Innate Magic: Passive skill learned at level 20.
   > Taunt: Special skill learned at level 22.
   > [P] Steadfast: Passive skill learned at level 24.
   > Heavenswield: Magic skill learned at level 25.
  ~ Player 2, 3 skills:
   > [P] Fortitude: Passive skill learned at level 21.
   > Magical Breeze: Magic skill learned at level 23.
   > [P] Topped Off: Passive skill learned at level 25.
  ~ Player 3, 5 skills:
   > Dispell: Magic skill learned at level 15.
   > Group Heal: Magic skill learned at level 20.
   > Curify: Magic skill learned at level 22.
   > [P] Clear Mind: Passive skill learned at level 23.
   > Resurgence: Magic skill learned at level 25.
  ~ Player 4, 3 skills:
   > Focus Up: Special skill learned at level 22.
   > [P] Sharp Eye: Passive skill learned at level 24.
   > [P] Masterful: Passive skill learned at level 25.
  ~ Tomes, 3 skills:
   > Dark Orb
   > Ice II
   > Wyvern's Fury
 - Added 101 new items:
  ~ 8 recovery/buff items:
   > Well-Rounded Combination
   > Large Potion
   > Large Elixir
   > Water Jug
   > Dispel Potion
   > Stimulant
   > Vicious Root
   > Fire Resistance Potion
  ~ 10 foodstuffs:
   > Tomato
   > Dragonfruit
   > Starfruit
   > Processed Oats
   > Mana Fritters
   > Seafood Meal
   > Carrot Seeds
   > Wheat Seeds
   > Oat Seeds
   > Tomato Seeds
  ~ 35 materials:
   > Fiery Powder
   > Malicious Essence
   > Shadowspec Ingot
   > Blank Tome
   > Feral Bat Wing
   > Thick-Skinned Herb
   > Turtle Scute
   > Medicinal Herb
   > Medicinal Root
   > Raw Truffle