@@ -1823,7 +1823,7 @@
       {
         "code": 25,
         "dataId": 2,
-        "value": 0.05
+        "value": 1.05
       }
     ],
     "iconIndex": 519,
@@ -2127,7 +2127,7 @@
       {
         "code": 25,
         "dataId": 0,
-        "value": 0.15
+        "value": 1.15
       },
       {
         "code": 23,
@@ -2525,7 +2525,7 @@
       {
         "code": 25,
         "dataId": 1,
-        "value": 0.15
+        "value": 1.15
       }
     ],
     "iconIndex": 182,
@@ -2891,7 +2891,7 @@
       {
         "code": 25,
         "dataId": 1,
-        "value": 0.1
+        "value": 1.1
       }
     ],
     "iconIndex": 180,
@@ -3189,7 +3189,7 @@
       {
         "code": 25,
         "dataId": 2,
-        "value": 0.05
+        "value": 1.05
       }
     ],
     "iconIndex": 739,
@@ -3253,7 +3253,7 @@
       {
         "code": 25,
         "dataId": 1,
-        "value": 0.05
+        "value": 1.05
       }
     ],
     "iconIndex": 473,
@@ -3374,7 +3374,7 @@
       {
         "code": 25,
         "dataId": 1,
-        "value": 0.03
+        "value": 1.03
       }
     ],
     "iconIndex": 477,
@@ -3421,7 +3421,7 @@
       {
         "code": 25,
         "dataId": 1,
-        "value": 0.8
+        "value": 1.08
       }
     ],
     "iconIndex": 741,
@@ -3936,7 +3936,7 @@
       {
         "code": 25,
         "dataId": 2,
-        "value": 0.1
+        "value": 1.1
       }
     ],
     "iconIndex": 658,
