@@ -1708,7 +1708,7 @@
       {
         "code": 25,
         "dataId": 0,
-        "value": 0.3
+        "value": 1.3
       }
     ],
     "iconIndex": 639,
@@ -2803,7 +2803,7 @@
       {
         "code": 25,
         "dataId": 0,
-        "value": 0.2
+        "value": 1.2
       }
     ],
     "iconIndex": 717,
