@@ -26,6 +26,11 @@ Additions:
  - Added farming.
  - Added pets. 7 are present in this update, and more will come in the future.
  - Added Discord rich presence support.
+ - Added 3 new attributes:
+  ~ OMD: Outgoing Magical Damage
+  ~ OED: Outgoing Elemental Damage
+  ~ OHR: Outgoing Healing Rate
+  ~ These attributes existed in some capacity prior to this update (e.g. Rose Headpiece) but now they have tracked numerical values and displays.
  - Added 18 new player skills:
   ~ Player 1, 4 skills:
    > [P] Innate Magic: Passive skill learned at level 20.
